==> SamSharma321/Biomedical_Projects/nRF_Driver_Projects/NIRS_Sleep_Project_v2/fNIRS/import/as7341.cpp <==
#include "as7341.h"
#include <zephyr/drivers/i2c.h>
#include <zephyr/logging/log.h>
#define colorsensor DT_NODELABEL(as7341)

bool Adafruit_AS7341::begin(){
    if (!device_is_ready(dev_i2c.bus)){
        LOG_INF("I2C bus %s is not read", dev_i2c.bus->name);
        return false;
    }

    return _init();
}

bool Adafruit_AS7341::_init() {
    uint8_t readbuf = 0;
    uint8_t regaddr = AS7341_ID;
    int ret = as7341_read(regaddr, &readbuf);

    // make sure we're talking to the right chip
    if ((readbuf & 0xFC) != (AS7341_CHIP_ID << 2)) {
        return false;
    }

    powerEnable(true);
    LOG_INF("ID Register: %x", readbuf>>2); // 0x92 register 1:0 bit reserved

    return (ret==0);
}

void Adafruit_AS7341::powerEnable(bool enable_power) {
    uint8_t readbuf = 0;
    uint8_t regaddr = AS7341_ENABLE;
    int ret = as7341_writeBit(regaddr, 0, true); // Enable register PON bit
    ret = as7341_read(regaddr, &readbuf);

    if (ret==0){
        LOG_INF("power enabled"); 
    }

}

bool Adafruit_AS7341::readAllChannels(uint16_t *readings_buffer) {
    bool retl, reth;
    setSMUXLowChannels(true);        // Configure SMUX to read low channels
    retl = enableSpectralMeasurement(true); // Start integration
    delayForData(0);                 // I'll wait for you for all time

    uint8_t temp_buf[12] = {0};
    as7341_readBytes(AS7341_CH0_DATA_L, temp_buf, 12);
    for (int i=0;i<12;i=i+2){
        readings_buffer[i/2] = temp_buf[i+1] << 8 | temp_buf[i];
    }

    setSMUXLowChannels(false);       // Configure SMUX to read high channels
    reth = enableSpectralMeasurement(true); // Start integration
    delayForData(0);                 // I'll wait for you for all time
    as7341_readBytes(AS7341_CH0_DATA_L, temp_buf, 12);
    for (int i=0;i<12;i=i+2){
        readings_buffer[(i/2)+6] = temp_buf[i+1] << 8 | temp_buf[i];
    }

    LOG_INF("415nm:%d,\t445nm:%d,\t480nm:%d,\t515nm:%d,\t555nm:%d,\t590nm:%d,\t630nm:%d,\t680nm:%d,\tClear:%d,\tNIR:%d", 
    readings_buffer[AS7341_CHANNEL_415nm_F1], 
    readings_buffer[AS7341_CHANNEL_445nm_F2], 
    readings_buffer[AS7341_CHANNEL_480nm_F3], 
    readings_buffer[AS7341_CHANNEL_515nm_F4], 
    readings_buffer[AS7341_CHANNEL_555nm_F5], 
    readings_buffer[AS7341_CHANNEL_590nm_F6], 
    readings_buffer[AS7341_CHANNEL_630nm_F7], 
    readings_buffer[AS7341_CHANNEL_680nm_F8], 
    readings_buffer[AS7341_CHANNEL_CLEAR], 
    readings_buffer[AS7341_CHANNEL_NIR]);

    return (retl|reth);
}

bool Adafruit_AS7341::enableSMUX(void) {
    uint8_t regaddr = AS7341_ENABLE;
    uint8_t data = 0;
    int ret = as7341_writeBit(regaddr, 4, true);
    
    int timeOut = 1000; // Arbitrary value, but if it takes 1000 milliseconds then something is wrong
    int count = 0;
    while ((data & 0x03) && count < timeOut) {
        as7341_read(regaddr, &data);
        k_msleep(1);
        count++;
    }
    if (count >= timeOut)
        return false;
    else
        return (ret==0);
}

void Adafruit_AS7341::delayForData(int waitTime) {
  if (waitTime == 0) // Wait forever
  {
    while (!getIsDataReady()) {
      k_msleep(1);
    }
    return;
  }
  if (waitTime > 0) // Wait for that many milliseconds
  {
    uint32_t elapsedMillis = 0;
    while (!getIsDataReady() && elapsedMillis < (uint32_t)waitTime) {
      k_msleep(1);
      elapsedMillis++;
    }
    return;
  }
  if (waitTime < 0) {
    // For future use?
    return;
  }
}
