==> QuanhTran/NO2_Measurement_System/Core/Src/as7341.cpp <==
#include "as7341.h"

bool Adafruit_AS7341::begin(uint8_t i2c_address, I2C_HandleTypeDef *i2c_handle,
		int32_t sensor_id) {

	i2c_han = i2c_handle;
	i2c_addr = i2c_address << 1;

	return _init(sensor_id);
}

bool Adafruit_AS7341::_init(int32_t sensor_id) {

	// make sure we're talking to the right chip
	if ((readRegisterByte(AS7341_WHOAMI) & 0xFC) != (AS7341_CHIP_ID << 2)) {
		return false;
	}

	powerEnable(true);
	return true;
}

bool Adafruit_AS7341::readAllChannels(uint16_t *readings_buffer) {

	setSMUXLowChannels(true);        // Configure SMUX to read low channels
	enableSpectralMeasurement(true); // Start integration
	delayForData(0);                 // I'll wait for you for all time

	bool low_success = readRegister(AS7341_CH0_DATA_L, (uint8_t*) readings_buffer,
			12);

	setSMUXLowChannels(false);       // Configure SMUX to read high channels
	enableSpectralMeasurement(true); // Start integration
	delayForData(0);                 // I'll wait for you for all time

	return low_success
			&& readRegister(AS7341_CH0_DATA_L, (uint8_t*) &readings_buffer[6], 12);
}

void Adafruit_AS7341::delayForData(uint32_t waitTime) {
	if (waitTime == 0) // Wait forever
			{
		while (!getIsDataReady()) {
			////osSemaphoreRelease(messageI2C1_LockHandle);
			HAL_Delay(1); // SF 2020-08-12 Does this really need to be so long?
			//osSemaphoreAcquire(messageI2C1_LockHandle, osWaitForever);

		}
		return;
	}
	if (waitTime > 0) // Wait for that many milliseconds
			{
		uint32_t elapsedMillis = 0;
		while ((!getIsDataReady()) && (elapsedMillis < waitTime)) {
			////osSemaphoreRelease(messageI2C1_LockHandle);
			HAL_Delay(1); // SF 2020-08-12 Does this really need to be so long?
			//osSemaphoreAcquire(messageI2C1_LockHandle, osWaitForever);
			elapsedMillis++;
		}
		return;
	}
	if (waitTime < 0) {
		// For future use?
		return;
	}
}

bool Adafruit_AS7341::readAllChannels(void) {
	return readAllChannels(_channel_readings);
}

void Adafruit_AS7341::powerEnable(bool enable_power) {
	uint8_t enable_reg = readRegisterByte(AS7341_ENABLE);
	enable_reg = modifyBitInByte(enable_reg, (uint8_t) enable_power, 0);
	writeRegisterByte(AS7341_ENABLE, enable_reg);
}

bool Adafruit_AS7341::enableSMUX(void) {
	bool success = modifyRegisterBit(AS7341_ENABLE, true, 4);

	int timeOut = 1000; // Arbitrary value, but if it takes 1000 milliseconds then
											// something is wrong
	int count = 0;
	while (checkRegisterBit(AS7341_ENABLE, 4) && count < timeOut) {
		////osSemaphoreRelease(messageI2C1_LockHandle);
		HAL_Delay(1); // SF 2020-08-12 Does this really need to be so long?
		//osSemaphoreAcquire(messageI2C1_LockHandle, osWaitForever);
		count++;
	}
	if (count >= timeOut)
		return false;
	else
		return success;
}
